# Onedegree_Motor_Blind

./: .gitignore  CMakeLists.txt  mosquitto.conf  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/certs/: github_root_cert.pem
main/encoder/: encoder.c  encoder.h
main/motor/: motor.c  motor.h  motor_task.c  motor_task.h
main/ota/: ota.c  ota.h
main/wifi/: wifi_prov.c  wifi_prov.h
